# chassis2024

./: .gitignore  404.html  LICENSE  README.md  README_PYPI.md  README_echo.md  README_echo2.md  README_helloworld.md  README_pygame.md  factory.json  index.html  project.json  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
archive/: index.html
concepts/: index.html
ex_10_helloworld/: index.html
ex_20_echo/: index.html
ex_30_echo2/: index.html
img/: echo_code_explanation.pdn  helloworld_code_explanation.pdn  helloworld_structure.pdn
infra_argparse/: index.html
infra_basicjsonpersistence/: index.html
infra_basicrun/: index.html
infra_index/: index.html
intro/: index.html
mkdocs/: mkdocs.yml
mkdocs/docs/: archive.md  concepts.md  ex_10_helloworld.md  ex_20_echo.md  ex_30_echo2.md  index.md  infra_argparse.md  infra_basicjsonpersistence.md  infra_basicrun.md  infra_index.md  intro.md  ref_executionnode.md
notes/: devlog.txt  notes.txt  testing_kahns_algorithm.txt
ref_executionnode/: index.html
search/: search_index.json
src/chassis2024/: __init__.py  chassis.py  exceptions.py  kahn.py  words.py
src/chassis2024/argparse/: __init__.py  words.py
src/chassis2024/basicjsonpersistence/: __init__.py  words.py
src/chassis2024/basicrun/: __init__.py
test/: test_foo.py
