[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chassis2024"
version = "1.0.0"

authors = [
  { name="Lion Kimbro", email="lionkimbro@gmail.com" },
]

description = "a flexible chassis for assembling Python programs from parts"

keywords = ["chassis", "framework", "infrastructure"]

readme = "README_PYPI.md"

requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = []

[tools.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/lionkimbro/chassis2024"
"Bug Tracker" = "https://github.com/lionkimbro/chassis2024/issues"

